# headless-chat-api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 9e57f82b2dd1_add_last_seen_message_id.py  a1a5dc8f68ba_add_is_archived_and_is_active.py  dba73a81c63e_initial_migration.py  fe17aa31175d_split_models_and_add_indexes.py
src/: main.py
src/api/: deps.py
src/core/: config.py  connection_manager.py  interfaces.py  logging.py  pubsub.py  security.py  storage_interfaces.py
src/database/: base_class.py  session.py
src/models/: all_models.py  conversation.py  message.py  participant.py  user.py
src/modules/auth/: basic_provider.py  router.py
src/modules/conversations/: router.py
src/modules/media/: local_storage.py
src/modules/messages/: repository.py  router.py  router_placeholder.py  service.py
src/modules/realtime/: router.py
src/modules/users/: router.py
src/schemas/: conversation.py  message.py  user.py
tests/: conftest.py  test_auth.py  test_messaging.py  test_users.py
